Improves file structure

--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,8 +2,8 @@
     <title>Guard ‒ Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/tpl/favicon.ico" type="image/x-icon">
-    <link rel="stylesheet" href="/tpl/style.css">
+    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
 
@@ -12,7 +12,7 @@
             <form class="login-form" method="POST">
 
                 <div class="logo-wrapper">
-                    <img class="logo" src="/tpl/logo.png" alt="Guard" />
+                    <img class="logo" src="/assets/logo.png" alt="Guard" />
                 </div>
 
                 <div class="input-wrapper">
