--- a/app/views/login.html
+++ b/app/views/login.html
@@ -2,7 +2,7 @@
     <title>Guard ‒ Login</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" href="/assets/favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="/assets/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
