--- a/app/views/login.html
+++ b/app/views/login.html
@@ -15,6 +15,10 @@
                     <img class="logo" src="/assets/logo.png" alt="Guard" />
                 </div>
 
+                <div class="notif-wrapper error" style="display: {%displayError%}">
+                    <p>Invalid credentials.</p>
+                </div>
+
                 <div class="input-wrapper">
                     <input type="text" name="username" placeholder="Username" autofocus>
                 </div>
