--- a/app/public/assets/style.css
+++ b/app/public/assets/style.css
@@ -1,6 +1,7 @@
 body {
     margin: 0 auto;
     padding: 0;
+    font-family: "Ubuntu Light", sans-serif;
 }
 
 .container {
@@ -25,6 +26,16 @@ body {
     position: relative;
     padding-bottom: 90px;
     padding-top: 50px;
+}
+
+.title {
+    font-size: 30px;
+    color: #06253e;
+    line-height: 1.2;
+    text-transform: uppercase;
+    text-align: center;
+    width: 100%;
+    display: block;
 }
 
 .login-form {
@@ -56,6 +67,24 @@ body {
     padding-bottom: 51px;
 }
 
+.notif-wrapper {
+    background: #52bf90;
+    margin-bottom: 16px;
+    color: #fff;
+    font-weight: 300;
+    border-radius: 4px;
+    width: 100%;
+    text-align: center;
+}
+
+.notif-wrapper p {
+    margin: .5em;
+}
+
+.notif-wrapper.error {
+    background: #990000;
+}
+
 .input-wrapper {
     width: 100%;
     position: relative;
@@ -65,7 +94,7 @@ body {
     margin-bottom: 16px;
 }
 
-.login-wrapper {
+.login-wrapper, .button-wrapper {
     width: 100%;
     display: -webkit-box;
     display: -webkit-flex;
@@ -76,7 +105,7 @@ body {
     margin-top: 17px;
 }
 
-button {
+button, a.button {
     font-family: sans-serif;
     font-size: 16px;
     color: #fff;
@@ -100,17 +129,18 @@ button {
     transition: all 0.4s;
     outline: none !important;
     border: none;
-    -webkit-appearance: button;
+    text-decoration: none;
 }
 
-button:hover {
+button:hover, a.button:hover {
     background-color: #0f5e9c;
     cursor: pointer;
+    text-decoration: none;
 }
 
 input {
     font-family: sans-serif;
-    color: #083252;
+    color: #06253e;
     line-height: 1.2;
     font-size: 18px;
     display: block;
@@ -120,4 +150,8 @@ input {
     padding: 0 20px 0 38px;
     outline: none;
     border: none;
+}
+
+input.input-error {
+    border: 1px solid #da0808;
 }
